Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   public/css/style.css
	new file:   public/img/EsportTeamForHomePage.jpg
	new file:   public/img/TeamESPort2.jpeg
	new file:   public/img/esportTeamTest3.jpg
	new file:   public/img/game.jpeg
	new file:   public/img/game2.jpg
	new file:   public/img/imageForEditorsPage.jpg
	new file:   public/img/playerImage.jpeg
	new file:   public/img/teamEsport.jpeg
	new file:   public/img/tournament.jpg
	new file:   public/img/trophee.jpg
	new file:   public/img/world.jpeg
	new file:   public/img/worldTravel.jpeg
	modified:   src/Entity/Country.php

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,6 @@ body{
     width: 100%;
     height: auto;
     min-height: 10vh;
-    background-color: #92D2F1;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -69,7 +68,6 @@ body{
     width: 100%;
     height: auto;
     min-height: 10vh;
-    background-color: #92D2F1;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -103,7 +101,6 @@ body{
     width: 100%;
     height: auto;
     min-height: 80vh;
-    background-color: #92D2F1;
 }
 
 #container{
@@ -140,6 +137,7 @@ h1{
 
 .countryImage{
     width: 60px;
+    height: 40px;
 }
 
 .countryContainer figcaption{
