Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   templates/base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,6 +76,7 @@
                 {% block body %}{% endblock %}
             </section>
 
+            {# https://www.igdb.com/api : api for video game #}
         </main>
 
         <footer id="siteFooter">
