Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	new file:   migrations/Version20231031102917.php
	new file:   migrations/Version20231031103505.php
	modified:   public/css/style.css
	new file:   public/img/ImageEditorDetails2.jpg
	new file:   public/img/LogoSite.jpg
	new file:   public/img/imageEditorDetails.jpg
	new file:   public/img/landscape.jpg
	new file:   public/img/landscape2.jpeg
	new file:   public/img/videoGameDetail.jpeg
	new file:   public/js/apiGames.js
	modified:   src/Entity/Country.php
	modified:   src/Entity/Editor.php
	modified:   src/Form/EditorType.php
	modified:   templates/base.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,15 +9,22 @@ body{
     padding: 0;
 }
 
+.logoSite{
+    margin: 0;
+}
+
+.logoSite img{
+    width: 95.5px;
+}
+
 /****************************************************** HEADER *****************************************************/
 #siteHeader{
     width: 100%;
     height: auto;
     min-height: 10vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    
 }
 
 #siteHeader nav{
@@ -26,6 +33,7 @@ body{
     background-color: #DBF0FA;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin-right: 5px;
 }
 
 #siteName{
@@ -69,7 +77,7 @@ body{
     height: auto;
     min-height: 10vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -133,11 +141,6 @@ h1{
 .countryContainer{
     display: flex;
     margin-bottom: 0;
-}
-
-.countryImage{
-    width: 60px;
-    height: 40px;
 }
 
 .countryContainer figcaption{
