--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,14 @@
     </head>
     <body>
         <header id="siteHeader">
-            <h2 id="siteName">Nom du Site</h2>
+
+            {# site's logo with link to home page #}
+            <figure class="logoSite">
+                <a href="{{ path('app_home') }}"><img src="{{ asset('img/LogoSite.jpg') }}" alt="Logo du site"></a>
+            </figure>
+
+            {# Name for this site #}
+            <h2 id="siteName">Esport Xpertise</h2>
 
             <nav>
                 <ul class="navBar">
@@ -52,17 +59,37 @@
 
                     {# Bootstrap's way to do a dropdown menu #}
                     <div class="dropdown">
+
+                        {# Button to toggle the hide class in the ul #}
                         <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Ajouter
                         </a>
+
+                        {# where the hide class will be toggled #}
                         <ul class="dropdown-menu">
+
+                            {# Link to create a new game #}
                             <li><a href="#" class="dropdown-item">Jeu</a></li>
+
+                            {# Link to create a new country #}
                             <li><a href="{{ path('new_country') }}" class="dropdown-item">Pays</a></li>
+
+                            {# Link to create a new match #}
                             <li><a href="#" class="dropdown-item">Match</a></li>
+
+                            {# Link to create a new team #}
                             <li><a href="#" class="dropdown-item">Equipe</a></li>
+
+                            {# Link to create a new player #}
                             <li><a href="#" class="dropdown-item">Joueur</a></li>
+
+                            {# Link to create a new editor #}
                             <li><a href="{{ path('new_editor') }}" class="dropdown-item">Editeur</a></li>
+
+                            {# Link to create a new tournament #}
                             <li><a href="#" class="dropdown-item">Tournoi</a></li>
+
+                            {# Link to create a new social media #}
                             <li><a href="#" class="dropdown-item">Réseau Social</a></li>
                         </ul>
                     </div>
@@ -80,6 +107,16 @@
         </main>
 
         <footer id="siteFooter">
+
+            {# site's logo with link to home page #}
+            <figure class="logoSite">
+                <a href="{{ path('app_home') }}"><img src="{{ asset('img/LogoSite.jpg') }}" alt="Logo du site"></a>
+            </figure>
+
+            {# copyright.. #}
+            <p>&copy; 2023 - Esport Xpertise - <a href="#">Règlement</a> - <a href="#">Mentions légales</a></p>
+
+            {# Links to my own social medias #}
             <div class="socialMedia">
                 <a target="_blank" href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a target="_blank" href="#"><i class="fa-brands fa-x-twitter"></i></a>
@@ -87,14 +124,15 @@
                 <a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a target="_blank" href="#"><i class="fa-brands fa-snapchat"></i></a> 
                 <a target="_blank" href="#"><i class="fa-brands fa-github"></i></a> 
-              </div>
-  
-              <p>&copy; 2023 - Nom du site - <a href="#">Règlement</a> - <a href="#">Mentions légales</a></p>
+            </div>
         </footer>
         {% block javascripts %}
 
             {# Link to bootstrap's js #}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+            {# link to api games js #}
+            <script src="{{ asset('js/apiGames.js') }}"></script>
         {% endblock %}
     </body>
 </html>
