Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   .env
	modified:   composer.json
	modified:   composer.lock
	modified:   config/bundles.php
	modified:   config/packages/messenger.yaml
	modified:   config/packages/security.yaml
	modified:   config/services.yaml
	new file:   migrations/Version20231102081812.php
	new file:   migrations/Version20231102082558.php
	modified:   public/css/style.css
	new file:   public/upload/avatar/6543b3f369a80.jpg
	new file:   public/upload/avatar/defaultProfilePicture.jpg
	new file:   src/Controller/RegistrationController.php
	new file:   src/Controller/SecurityController.php
	new file:   src/Entity/User.php
	modified:   src/Form/CountryType.php
	modified:   src/Form/EditorType.php
	modified:   src/Form/GameType.php
	new file:   src/Form/RegistrationFormType.php
	new file:   src/Repository/UserRepository.php
	new file:   src/Security/AppAuthenticator.php
	new file:   src/Security/EmailVerifier.php
	new file:   src/Service/FileUploader.php
	modified:   symfony.lock
	modified:   templates/base.html.twig
	new file:   templates/registration/confirmation_email.html.twig
	new file:   templates/registration/register.html.twig
	new file:   templates/security/login.html.twig
	new file:   templates/security/userProfile.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,15 @@ body{
     min-width: 9rem;
 }
 
+.userProfilePicture{
+    margin: 0;
+}
+
+.userProfilePicture img{
+    width: 35px;
+    border-radius: 50%;
+}
+
 /****************************************** FOOTER *************************************************************/
 #siteFooter{
     width: 100%;
@@ -120,6 +129,7 @@ body{
 h1{
     width: 100%;
     text-align: center;
+    margin: 0;
 }
 
 /******************************************************* LIST COUNTRIES PAGE ***************************************/
@@ -176,4 +186,29 @@ h1{
     display: flex;
     align-items: center;
     text-transform: uppercase;
+}
+
+/************************************************************ USER PROFILE *****************************************/
+.profilePicture{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profilePicture img{
+    width: 100px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+/************************************************************* REGISTRATION FORM ***********************************/
+.formRowPassword{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.formRowPassword div{
+    width: 45%;
 }
