Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	new file:   migrations/Version20231103083923.php
	modified:   public/js/apiGames.js
	modified:   src/Entity/Editor.php
	modified:   src/Security/AppAuthenticator.php
	modified:   templates/base.html.twig
	modified:   templates/country/countryForm.html.twig
	modified:   templates/registration/confirmation_email.html.twig

--- a/templates/country/countryForm.html.twig
+++ b/templates/country/countryForm.html.twig
@@ -10,6 +10,8 @@
     {% else %}
         <h1>Ajouter un Pays !</h1>
     {% endif %}
+
+    <p><a target="_blank" href="https://flagsapi.com/">Prendre ici le lien pour le drapeau</a></p>
         
     {# First form is the FUNCTION the second one is the var creates in the controller #}
     {{ form(form) }}
