--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -150,6 +150,9 @@
         </footer>
         {% block javascripts %}
 
+            {# script for axios // this is a library that allows me to make http requests this is usually use to communicate with an api #}
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
             {# Link to bootstrap's js #}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
