--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,8 +1,8 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Bonjour! Veuillez confirmer votre email s'il vous plaît!</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
+    Veuillez, s'il vous plaît, cliquer sur le lien ci-dessous pour validé votre mail<br><br>
+    <a href="{{ signedUrl|raw }}">Valider mon Email</a>.
     This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
