Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   composer.json
	modified:   composer.lock
	modified:   public/js/apiGames.js
	new file:   src/Controller/ApiController.php
	modified:   src/Controller/HomeController.php
	modified:   src/Entity/Game.php
	modified:   src/Form/EditorType.php
	modified:   src/Form/GameType.php
	modified:   templates/base.html.twig
	modified:   templates/game/index.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/security/userProfile.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
                     <li><a href="{{ path('app_home') }}">Accueil</a></li>
 
                     {# link to list of games #}
-                    <li><a href="{{ path('app_home') }}">Jeux</a></li>
+                    <li><a href="{{ path('app_game') }}">Jeux</a></li>
 
                     {# link to list of editors #}
                     <li><a href="{{ path('app_editor') }}">Editeurs</a></li>
@@ -91,7 +91,7 @@
                         <ul class="dropdown-menu">
 
                             {# Link to create a new game #}
-                            <li><a href="{{ path('app_home') }}" class="dropdown-item">Jeu</a></li>
+                            <li><a href="{{ path('new_game') }}" class="dropdown-item">Jeu</a></li>
 
                             {# Link to create a new country #}
                             <li><a href="{{ path('new_country') }}" class="dropdown-item">Pays</a></li>
