--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}HomeController!{% endblock %}
 
+    {# {% for game in games %}
+        <li>{{ game.name }}</li>
+    {% endfor %} #}
 {% block body %}
 
 {% endblock %}
