--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -3,18 +3,14 @@
 {% block title %}Hello GameController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>List of Games</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <ul>
+            {% for game in games %}
+                <li>
+                    <a href="{{ path('app_api', {'name': game.name}) }}">{{ game.name }}</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/Diogo/projetEsport/src/Controller/GameController.php'|file_link(0) }}">src/Controller/GameController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/Diogo/projetEsport/templates/game/index.html.twig'|file_link(0) }}">templates/game/index.html.twig</a></code></li>
-    </ul>
-</div>
+                </li>
+            {% endfor %}
+        </ul>
 {% endblock %}
