Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   composer.lock
	modified:   public/css/style.css
	renamed:    public/upload/avatar/6543b3f369a80.jpg -> public/upload/avatar/6543b34da870d.jpg
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/GameController.php
	modified:   src/Controller/RegistrationController.php
	modified:   src/Controller/SecurityController.php
	new file:   src/Controller/UserController.php
	new file:   src/Form/UserType.php
	new file:   src/Twig/AmountExtension.php
	modified:   templates/country/countryForm.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/game/gameForm.html.twig
	new file:   templates/registration/modifyUser.html.twig
	modified:   templates/security/userProfile.html.twig
	new file:   templates/user/edit.html.twig
	new file:   templates/user/index.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,3 +212,31 @@ h1{
 .formRowPassword div{
     width: 45%;
 }
+
+
+/******************************************************* DETAILS GAME ***************************************/
+.gameCover{
+    display: flex;
+    justify-content: center;
+}
+
+.gameCover img{
+    width: 80px;
+    margin-right: 10px;
+}
+
+.gameCover figcaption{
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+.screenshots{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.screenshots img{
+    width: 16%;
+}
