--- a/templates/game/gameForm.html.twig
+++ b/templates/game/gameForm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajoutez un éditeur de jeux !{% endblock %}
+{% block title %}Ajoutez un noveau jeu !{% endblock %}
 
 {% block body %}
         
@@ -8,7 +8,7 @@
     {% if edit %}
         <h1>Modifier {{ edit }}</h1>
     {% else %}
-        <h1>Ajouter un éditeur de jeux !</h1>
+        <h1>Ajouter un nouveau jeu !</h1>
     {% endif %}
         
     {# First form is the FUNCTION the second one is the var creates in the controller #}
