--- a/templates/game/gameDetails.html.twig
+++ b/templates/game/gameDetails.html.twig
@@ -1,14 +1,152 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{editor}}{% endblock %}
+{% block title %}{{game}}{% endblock %}
 
 {% block body %}
-    <h1>{{editor}}</h1>
-        
-    <p>Son siège sociale : <a href="{{ path('details_country', {'id': editor.country.id}) }}">{{ editor.country }}</a></p>
+    
+    <figure class="gameCover">
 
-    <a href="{{ path('edit_editor', {'id': editor.id}) }}" class="btn btn-warning">Modifier {{ editor }}</a>
-    <a href="{{ path('delete_editor', {'id': editor.id}) }}" class="btn btn-danger">Supprimer {{ editor }}</a>
+        {# link to the cover of the game the image is in the api#}
+        <img src="{{ urlCover }}" alt="Affiche du jeu {{ game }} ">
+
+        <figcaption>
+
+            <h1>{{game}}</h1>
+
+        </figcaption>
+
+    </figure>
+
+    <figure class="screenshots">
+
+        {# loop to search all the sceenshots on the api database for the game #}
+        {% for urlScreenshot in urlScreenshots %}
+
+            {# display of all the scrennshots in the database #}
+            <img src="{{ urlScreenshot }}" alt="image du jeu {{ game }}">
+
+        {% endfor %}
+
+    </figure>
+
+    {# display of the game's release date. date_fr is a personal function implemented in twig by a filter who allows me to transform a date on a french version it means that the day and month are in french and the date is in 'l d F Y' type #}
+    <p>Le jeu est sorti le {{ infos.0.release_dates.0.date | date_fr}}</p>
+
+    <p>Ce jeu est du type 
+
+        {# We set a variable to the length of the array and for each loop we subtract him 1 to find when its value is 2 the genre just before the last one wich allow me to build a sentence correctly #}
+        {% set beforeLast = infos.0.genres|length %}
+
+        {# loop to search all the genres of the game #}
+        {% for genre in infos.0.genres %}
+                
+            {# loop.last is the to check if an element is the last in the array #}
+            {% if loop.last %}
+                {{ genre.name }}.
+                    
+            {# beforeLast is the to check if an element is the one before the last in the array #}
+            {% elseif beforeLast == 2 %}
+                {{ genre.name }} et
+
+            {# those are the elements who are neither the last oe the before last #}
+            {% else %}
+                {{ genre.name }},
+                
+            {% endif %}
+
+            {# beforeLast loose 1 every time we end a loop in the for. This is here to allow me to check if later on the genre is the one before the last or not #}
+            {% set beforeLast = beforeLast - 1 %}
+
+        {% endfor %}
+
+    </p>
+    
+    {# set a var to only show the links to purchase the game #}
+    {% set purchaseLinks = {'13' : 'steam',
+                            '16' : 'epicgames',
+                            '17' : 'gog'
+                            } 
+    %}
+
+    {# set a var to only show the links to purchase the social medias of the game #}
+    {% set socialMediaLinks = {'4' : 'facebook',
+                            '5' : 'X',
+                            '6' : 'twitch',
+                            '8' : 'instagram',
+                            '9' : 'youtube',
+                            } 
+    %}
+
+    {# Link to official web page #}
+    {% for website in infos.0.websites %}
+
+        {# In the api the link to the official page has an id of 1 so we take the category 1 to display the link to the official page #}
+        {% if website.category == 1 %}
+            <p><a target="_blank" href="{{ website.url }}">lien vers le site officiel </a></p>                
+        {% endif %}
+
+    {% endfor %}
+
+    {# Links to purchase the game #}
+    <h3>Liens vers les sites qui proposent ce jeu :</h3>
+
+    {# loop to search all the links to websites in the api database #}
+    {% for website in infos.0.websites %}
+
+        {# loop to search all the links where games could be purchase in the api database  #}
+        {% for key, linkName in purchaseLinks %}
+
+            {# We check if the website is listed as a link to purchase and if the api finds him trustable #}
+            {% if website.category == key and website.trusted %}
+
+                {# display of the link after they passed the conditions  #}
+                <p><a target="_blank" href="{{ website.url }}"> {{ linkName|capitalize }} </a></p>
+
+            {% endif %}
+
+        {% endfor %}
+
+    {% endfor %}
+
+    {# link to the game's social medias #}
+    <div class="socialMediaGame">
+
+        <h3>liens vers les réseaux sociaux :</h3>
+
+        <ul>
+
+            {# loop to search all the links to websites in the api database #}
+            {% for website in infos.0.websites %}
+
+                {# loop to search all the links of the game's social medias in the api database #}
+                {% for key, linkName in socialMediaLinks %}
+
+                     {# We check if the website is listed as a link to a social media and if the api finds him trustable #}
+                    {% if website.category == key and website.trusted %}
+
+                        {# This is a condition for the font awesome because the twitter logo isnt written the same maner as the other ones  #}
+                        {% if linkName == 'X' %}
+
+                            <li><a target="_blank" href="{{ website.url }}"><i class="fa-brands fa-x-twitter"></i></a></li> 
+
+                        {% else %}
+
+                            <li><a target="_blank" href="{{ website.url }}"><i class="fa-brands fa-{{linkName}}"></i></a></li>  
+
+                        {% endif %}
+
+                    {% endif %}
+
+                {% endfor %} 
+
+            {% endfor %}
+        </ul>
+    </div>
+
+        
+
+    <a href="{{ path('edit_game', {'id': game.id}) }}" class="btn btn-warning">Modifier {{ game }}</a>
+    <a href="{{ path('delete_game', {'id': game.id}) }}" class="btn btn-danger">Supprimer {{ game }}</a>
 
 
 {% endblock %}
