--- a/templates/security/userProfile.html.twig
+++ b/templates/security/userProfile.html.twig
@@ -11,7 +11,7 @@
     </figure>
 
 
-    <a href="#"><input type="button" value="Modifier le compte"></a>
+    <a href="{{ path('edit_user', {'id': user.id}) }}"><input type="button" value="Modifier le compte"></a>
 
 
 
